# archlib

./: .gitignore  EXECUTABLE_ARCHITECTURE.v1.md  EXECUTABLE_ARCHITECTURE.v2.md  INSTALL.md  MIND_MAP.md  README.md  pyproject.toml  test_basic.py  test_cli.py  test_javascript_parser.py
archlib/: __init__.py  architecture.py  nodes.py  validation.py
archlib/parsing/: __init__.py  javascript.py  python.py
examples/: architecture.py  template.py
