[project]
name = "archlib"
version = "0.1.0"
description = "Executable Architecture Library - Define and validate architecture as executable Python code"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
authors = [
    {name = "Archlib Contributors"}
]
keywords = ["architecture", "validation", "executable", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
treesitter = [
    "tree-sitter>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/archlib"
Documentation = "https://github.com/yourusername/archlib"
Repository = "https://github.com/yourusername/archlib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["archlib"]

